fix(styles): allow tooltip overflow on table head

--- a/packages/styles/src/layouts/_table.scss
+++ b/packages/styles/src/layouts/_table.scss
@@ -27,6 +27,17 @@
 				display: initial;
 			}
 
+			// Edge case.
+			// Tooltips on head will display over the first row
+			> thead:first-child {
+				> tr:first-child {
+					z-index: 1;
+				}
+				> tr:nth-child(2) {
+					z-index: 0;
+				}
+			}
+
 			thead {
 				z-index: 3;
 
